# PC-Configuration

./: QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  main.py  manage.py  pyproject.toml  test.py
apps/accounts/: apps.py  urls.py  views.py
apps/build_history/: apps.py  models.py  urls.py  views.py
apps/build_history/migrations/: 0001_initial.py
apps/build_history/templatetags/: build_history_extras.py
apps/compatibility/: __init__.py  all_checks.py  checker.py  utils.py
apps/forum/: admin.py  apps.py  models.py  urls.py  views.py
apps/forum/migrations/: 0001_initial.py
apps/forum/templatetags/: forum_extras.py
apps/pc_builder/: apps.py  catalog.py  compatibility.py  models.py  servicer.py  services.py  urls.py  views.py
apps/pc_builder/migrations/: 0001_initial.py  (+1 more)
apps/recommender/: admin.py  agent.py  forms.py  models.py  recommendation.py  scoring.py  services.py  test_agent.py  tests.py  urls.py  utils.py  views.py
config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  compat.py  importers.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py
host/: asgi.py  settings.py  urls.py  wsgi.py
pc_configuration/: asgi.py  settings.py  urls.py  wsgi.py
pcpicker/: asgi.py  settings.py  urls.py  wsgi.py
recommend/compatibility/: cpu_mb.py  gpu_case.py  mb_case.py  mb_ram.py  psu_check.py
recommend/core/: budget_allocator.py  config_generator.py  score_weight.py  selector.py
static/css/: style.css
static/js/: main.js
templates/: base.html  top_nav.html
templates/registration/: login.html
(+63 files in other folders)
