[project]
name = "host-configuration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "django>=5.0",
    "pymysql>=1.1.2",
    "cryptography>=46.0.5",
    "mysqlclient>=2.2.8",
]
